syntax = "proto3";

message Entity {
  uint32 id = 1;
  float x = 2;
  float y = 3;
  bool pressed = 4;
  string color = 5;
}

message Body {
  uint32 id = 1;
  string color = 2;
  float x = 3;
  float y = 4;
  float w = 5;
  float h = 6;
  float rotation = 7;
}

message GameState {
  repeated Entity entities = 1;
  repeated Body bodies = 2;
}

message ClientInput {
  float x = 1;
  float y = 2;
  bool pressed = 3;
}
message ClientJoined {
  uint32 id = 1;
}
